made adjustments to classes, and added tech at the park course

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@ services:
   - title: Web Development 101
     icon: fa fa-laptop
     desc: Two hour workshop focused on a positive experience in Web Development.
-    bg: /assets/images/@stock/service-item-1-bg.jpg
-    link: https://web.finli.com/classes/course-offerings/
+    bg: /assets/images/courses/intro-service.png
+    link: https://finli.com/classes/./tech-the-park/
   - title: Intro to Web Development
-    icon: fa fa-laptop
-    desc: Free Six Week Apprenticeship Teaching The Fundamentals of Web Development.
+    icon: fa fa-laphttps://finli.com/classes/./course-offerings/top
+    desc: 6 Week Apprenticeship Teaching The Fundamentals of Web Development.
     bg: /assets/images/@stock/service-item-2-bg.jpg
-    link: https://web.finli.com/classes/course-offerings/
+    link: https://finli.com/classes/course-offerings/
   - title: Eight Week Professional Training
     icon: fa fa-bookmark-o
     desc: 8 Week Apprenticeship focused on building Fullstack JavaScript Applications.
     bg: /assets/images/@stock/service-item-3-bg.jpg
-    link: https://web.finli.com/classes/course-offerings/
+    link: https://finli.com/classes/course-offerings/
 works:
   - path: _works/diff-foods.md
   - path: _works/sketch-book.md
