--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 onepage: true
 services:
-  - title: Web Development 101
+  - title:Tech @ the Park
     icon: fa fa-laptop
-    desc: Two hour workshop focused on a positive experience in Web Development.
+    desc: Two hour workshops focused on a positive experience in Web Development.
     bg: /assets/images/courses/intro-service.png
     link: https://finli.com/classes/./tech-the-park/
   - title: Intro to Web Development
