--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@ members:
         icon: instagram
     desc:
       "Mike is a Customer Success and Sales professional in IT, specialises in building blocks of the content and connecting with our core audience."
-  - avatar: assets/images/members/tyler.jpg
-    name: Tyler Grady
-    position: Curriculum Development
+  - avatar: assets/images/members/jerald.jpg
+    name: Jerald Garrett
+    position: Director of Operations
     socials:
       - link: http://twitter.com
         icon: twitter
       - link: http://facebook.com
         icon: facebook
     desc:
-      "Tyler started teaching back in 2008. Since then, he has worked for a wide range of educational spaces in California. At TutorD Scholars, Tyler’s role means solving various visual design problems and building out curriculums so students may easily connect ideas and grasp concepts."
+      "Jerald is our Director of Operations and prefers to make his impact behind the scenes.  He has an extensive background in HR and also is very passionate about bring tech to urban communities."
 
 team_slides:
   - /assets/images/stills/MVI_5606.00_00_08_00.Still008.jpg
