added jerald and fixed sizing

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout: default
 onepage: true
 services:
-  - title:Tech @ the Park
+  - title: Tech @ the Park
     icon: fa fa-laptop
     desc: Two hour workshops focused on a positive experience in Web Development.
     bg: /assets/images/courses/intro-service.png
     link: https://finli.com/classes/./tech-the-park/
   - title: Intro to Web Development
-    icon: fa fa-laphttps://finli.com/classes/./course-offerings/top
+    icon: fa fa-laptop
     desc: 6 Week Apprenticeship Teaching The Fundamentals of Web Development.
     bg: /assets/images/@stock/service-item-2-bg.jpg
     link: https://finli.com/classes/course-offerings/
@@ -56,7 +56,7 @@ members:
         icon: instagram
     desc:
       "Mike is a Customer Success and Sales professional in IT, specialises in building blocks of the content and connecting with our core audience."
-  - avatar: assets/images/members/tyler.jpg
+  - avatar: assets/images/members/jerald.jpg
     name: Jerald Garrett
     position: Director of Operations
     socials:
