--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ members:
       - link: http://facebook.com
         icon: facebook
     desc:
-      "Jerald is our Director of Operations and prefers to make his impact behind the scenes.  He has an extensive background in HR and also is very passionate about bring tech to urban communities."
+      "Jerald is our Director of Operations and prefers to make his impact behind the scenes.  He has an extensive background in HR and also is very passionate about bringing tech to urban communities."
 
 team_slides:
   - /assets/images/stills/MVI_5606.00_00_08_00.Still008.jpg
@@ -79,12 +79,12 @@ testimonials:
       name: "B'yond Taylor"
       avatar: '/assets/images/scholars/byond-taylor-1.png'
       position: 'Scholar Zero'
-  - quote: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing."
+  - quote: "If I could sum the course up in one word: Empowering."
     author:
       name: "Tyler Grady"
       avatar: 'assets/images/members/tyler-grady.jpg'
       position: 'Former Web Dev Scholar'
-  - quote: "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est."
+  - quote: "This was my first attempt at getting into the IT field and the instructors made me feel like I could actually get into tech and having people that I could relate to teaching the class was a priceless experience."
     author:
       name: "Jarrel Bailey"
       avatar: 'assets/images/scholars/jarrel-bailey.jpg'
@@ -94,7 +94,7 @@ testimonials:
       name: "Christina Day"
       avatar: '/assets/images/members/christina-day.png'
       position: 'Volunteer - UX/UI Designer'
-  - quote: "After going to the workshop it is apparent that TutorD Scholars is an organization that genuinely values and respects that everyone learns differently. During the class, I could see students feel more confident and empowered to learn and become curious..."
+  - quote: "After going to the workshop it is apparent that TutorD Scholars is an organization that genuinely values and respects that everyone learns differently. During the class, I could see students feel more confident and empowered to learn and become curious."
     author:
       name: "Aya Pogrebinsky"
       avatar: '/assets/images/members/aya-pogrebinsky.jpg'
