updated index file, deleted and replace images

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ services:
   - title: Intro to Web Development
     icon: fa fa-laptop
     desc: 6 Week Apprenticeship Teaching The Fundamentals of Web Development.
-    bg: /assets/images/@stock/service-item-2-bg.jpg
+    bg: /assets/images/courses/intro-to-web.png
     link: https://finli.com/classes/course-offerings/
   - title: Eight Week Professional Training
     icon: fa fa-bookmark-o
     desc: 8 Week Apprenticeship focused on building Fullstack JavaScript Applications.
-    bg: /assets/images/@stock/service-item-3-bg.jpg
+    bg: /assets/images/courses/tbd-the-professionals-1.png
     link: https://finli.com/classes/course-offerings/
 works:
   - path: _works/diff-foods.md
