Deleted unused images, and updated text and typos

--- a/index.html
+++ b/index.html
@@ -101,20 +101,6 @@ testimonials:
       position: 'Volunteer - UX/UI Designer'
 
 clients:
-  - /assets/images/@stock/client-1.png
-  - /assets/images/@stock/client-2.png
-  - /assets/images/@stock/client-3.png
-  - /assets/images/@stock/client-4.png
-
-  - /assets/images/@stock/client-5.png
-  - /assets/images/@stock/client-6.png
-  - /assets/images/@stock/client-7.png
-  - /assets/images/@stock/client-2.png
-
-  - /assets/images/@stock/client-3.png
-  - /assets/images/@stock/client-4.png
-  - /assets/images/@stock/client-1.png
-  - /assets/images/@stock/client-6.png
 
 courses:
 
@@ -133,10 +119,9 @@ courses:
 
       </h1>
       <h2 class='thin'>
-        TutorD Scholars is a hands-on educational platform, teaching urban youth in-
-        demand 21st-century skills via online and in-person workshops.
-       {% assign nav_obj = site.data.nav | where:'section_id','works' | first %}
-       <a href='{{ "index.html" | append:nav_obj.path | relative_url }}'>View our courses.</a>
+        TutorD Scholars is a hands-on educational platform, teaching urban youth in-demand 22nd Century skills via online and in-person workshops and training courses.
+        {% assign nav_obj = site.data.nav | where:'section_id','works' | first %}
+        <a href='{{ "index.html" | append:nav_obj.path | relative_url }}'>View our courses.</a>
       </h2>
     </div>
   </div>
